Added all changes for revised submission

--- a/Diff.tex
+++ b/Diff.tex
@@ -1347,8 +1347,9 @@ significantly improved the quality of this paper.
 \hypertarget{refs}{}
 \hypertarget{ref-pauly_2005-qV}{}
 1. Pauly D, Watson R, Alder J. Global trends in world fisheries: Impacts
-on marine ecosystems and food security. Philos Trans R Soc Lond, B, Biol
-Sci. 2005;360: 5--12.
+on marine ecosystems and food security. \DIFdelbegin \DIFdel{Philos Trans R Soc Lond, B, Biol
+Sci}\DIFdelend \DIFaddbegin \DIFadd{Philosophical Transactions of
+the Royal Society B: Biological Sciences}\DIFaddend . 2005;360: 5--12.
 doi:\href{https://doi.org/10.1098/rstb.2004.1574}{10.1098/rstb.2004.1574}
 
 \hypertarget{ref-halpern_2008-dK}{}
@@ -1376,7 +1377,7 @@ doi:\href{https://doi.org/10.1016/j.marpol.2016.07.032}{10.1016/j.marpol.2016.07
 
 \hypertarget{ref-hastings_2017-sm}{}
 6. Hastings A, Gaines SD, Costello C. Marine reserves solve an important
-bycatch problem in fisheries. Proc Natl Acad Sci U S A. 2017;\DIFdelbegin \DIFdel{doi:
+bycatch problem in fisheries. Proc Natl Acad Sci \DIFdelbegin \DIFdel{U S A}\DIFdelend \DIFaddbegin \DIFadd{USA}\DIFaddend . 2017;\DIFdelbegin \DIFdel{doi:
 }\DIFdelend \DIFaddbegin \DIFadd{114:
 8927--8934.
 doi:}\DIFaddend \href{https://doi.org/10.1073/pnas.1705169114}{10.1073/pnas.1705169114}
@@ -1404,9 +1405,9 @@ climatic impacts. PLoS ONE. 2012;7: e40832.
 doi:\href{https://doi.org/10.1371/journal.pone.0040832}{10.1371/journal.pone.0040832}
 
 \hypertarget{ref-roberts_2017-J9}{}
-\DIFdelbegin \DIFdel{10. }\DIFdelend \DIFaddbegin \DIFadd{9. }\DIFaddend Roberts CM, O'Leary BC, McCauley DJ, Cury PM, Duarte CM, Lubchenco J,
+\DIFdelbegin \DIFdel{10. }\DIFdelend \DIFaddbegin \DIFadd{9. }\DIFaddend Roberts CM, \DIFdelbegin \DIFdel{O'Leary }\DIFdelend \DIFaddbegin \DIFadd{OLeary }\DIFaddend BC, McCauley DJ, Cury PM, Duarte CM, Lubchenco J,
 et al. Marine reserves can mitigate and promote adaptation to climate
-change. Proc Natl Acad Sci U S A. 2017;114: 6167--6175.
+change. Proc Natl Acad Sci \DIFdelbegin \DIFdel{U S A}\DIFdelend \DIFaddbegin \DIFadd{USA}\DIFaddend . 2017;114: 6167--6175.
 doi:\href{https://doi.org/10.1073/pnas.1701262114}{10.1073/pnas.1701262114}
 
 \hypertarget{ref-munguavega_2015-yg}{}
@@ -1437,7 +1438,7 @@ doi:\href{https://doi.org/10.1093/icesjms/fsx059}{10.1093/icesjms/fsx059}
 
 \hypertarget{ref-betti_2017-lq}{}
 \DIFdelbegin \DIFdel{15. }\DIFdelend \DIFaddbegin \DIFadd{14. }\DIFaddend Betti F, Bavestrello G, Bo M, Asnaghi V, Chiantore M, Bava S, et al.
-Over 10 years of variation in mediterranean reef benthic communities.
+Over 10\DIFaddbegin \DIFadd{~}\DIFaddend years of variation in mediterranean reef benthic communities.
 Marine Ecology. 2017;38: e12439.
 doi:\href{https://doi.org/10.1111/maec.12439}{10.1111/maec.12439}
 
@@ -1445,7 +1446,7 @@ doi:\href{https://doi.org/10.1111/maec.12439}{10.1111/maec.12439}
 %DIFDELCMD < %%%
 \DIFdelend \DIFaddbegin \hypertarget{ref-szuwalski_2017-jc}{}
 \DIFadd{15. Szuwalski CS, Burgess MG, Costello C, Gaines SD. High fishery
-catches through trophic cascades in china. Proc Natl Acad Sci U S A.
+catches through trophic cascades in china. Proc Natl Acad Sci USA.
 2017;114: 717--721.
 doi:}\href{https://doi.org/10.1073/pnas.1612722114}{10.1073/pnas.1612722114}
 
@@ -1483,8 +1484,10 @@ doi:\href{https://doi.org/10.4236/ojms.2017.73027}{10.4236/ojms.2017.73027}
 \DIFdelbegin \DIFdel{20. }\DIFdelend \DIFaddbegin \DIFadd{21. }\DIFaddend Moland E, Olsen EM, Knutsen H, Garrigou P, Espeland SH, Kleiven AR,
 et al. Lobster and cod benefit from small-scale northern marine
 protected areas: Inference from an empirical before-after control-impact
-study. Proc Biol Sci. 2013;280: 20122679.
-doi:\href{https://doi.org/10.1098/rspb.2012.2679}{10.1098/rspb.2012.2679}
+study. \DIFdelbegin \DIFdel{Proc Biol Sci}\DIFdelend \DIFaddbegin \DIFadd{Proceedings of the Royal Society B: Biological Sciences}\DIFaddend .
+2013;280: \DIFdelbegin \DIFdel{20122679.
+}\DIFdelend \DIFaddbegin \DIFadd{20122679--20122679.
+}\DIFaddend doi:\href{https://doi.org/10.1098/rspb.2012.2679}{10.1098/rspb.2012.2679}
 
 \hypertarget{ref-soykan_2015-nu}{}
 \DIFdelbegin \DIFdel{21. }\DIFdelend \DIFaddbegin \DIFadd{22. }\DIFaddend Soykan CU, Lewison RL. Using community-level metrics to monitor the
@@ -1523,8 +1526,8 @@ doi:\href{https://doi.org/10.1016/j.gloenvcha.2013.08.001}{10.1016/j.gloenvcha.2
 
 \hypertarget{ref-lowndes_2017-xh}{}
 \DIFdelbegin \DIFdel{27. }\DIFdelend \DIFaddbegin \DIFadd{28. }\DIFaddend Lowndes JSS, Best BD, Scarborough C, Afflerbach JC, Frazier MR,
-O'Hara CC, et al. Our path to better science in less time using open
-data science tools. Nat ecol evol. 2017;1: 0160.
+\DIFdelbegin \DIFdel{O'Hara }\DIFdelend \DIFaddbegin \DIFadd{OHara }\DIFaddend CC, et al. Our path to better science in less time using open data
+science tools. Nat ecol evol. 2017;1: 0160.
 doi:\href{https://doi.org/10.1038/s41559-017-0160}{10.1038/s41559-017-0160}
 
 \hypertarget{ref-halpern_2012-k9}{}
@@ -1534,7 +1537,7 @@ Nature. 2012;488: 615--620.
 doi:\href{https://doi.org/10.1038/nature11397}{10.1038/nature11397}
 
 \hypertarget{ref-halpern_2017-Zi}{}
-\DIFdelbegin \DIFdel{29. }\DIFdelend \DIFaddbegin \DIFadd{30. }\DIFaddend Halpern BS, Frazier M, Afflerbach J, O'Hara C, Katona S, Stewart
+\DIFdelbegin \DIFdel{29. }\DIFdelend \DIFaddbegin \DIFadd{30. }\DIFaddend Halpern BS, Frazier M, Afflerbach J, \DIFdelbegin \DIFdel{O'Hara }\DIFdelend \DIFaddbegin \DIFadd{OHara }\DIFaddend C, Katona S, Stewart
 Lowndes JS, et al. Drivers and implications of change in global ocean
 health over the past five years. PLoS ONE. 2017;12: e0178267.
 doi:\href{https://doi.org/10.1371/journal.pone.0178267}{10.1371/journal.pone.0178267}
@@ -1582,10 +1585,12 @@ doi:\href{https://doi.org/10.5343/bms.2015.1095}{10.5343/bms.2015.1095}
 open access tool. PLoS ONE. 2017;12: e0179393.
 doi:\href{https://doi.org/10.1371/journal.pone.0179393}{10.1371/journal.pone.0179393}
 
-\hypertarget{ref-burgess_2016-HN}{}
-\DIFdelbegin \DIFdel{37. }\DIFdelend \DIFaddbegin \DIFadd{38. }\DIFaddend Burgess MG, Clemence M, McDermott GR, Costello C, Gaines SD. Five
-rules for pragmatic blue growth. Marine Policy. 2016;
-doi:\href{https://doi.org/10.1016/j.marpol.2016.12.005}{10.1016/j.marpol.2016.12.005}
+\DIFdelbegin %DIFDELCMD < \hypertarget{ref-burgess_2016-HN}{}
+%DIFDELCMD < %%%
+\DIFdel{37. }\DIFdelend \DIFaddbegin \hypertarget{ref-burgess_2018-HN}{}
+\DIFadd{38. }\DIFaddend Burgess MG, Clemence M, McDermott GR, Costello C, Gaines SD. Five
+rules for pragmatic blue growth. Marine Policy. \DIFdelbegin \DIFdel{2016;}\DIFdelend \DIFaddbegin \DIFadd{2018;87: 331--339.
+}\DIFaddend doi:\href{https://doi.org/10.1016/j.marpol.2016.12.005}{10.1016/j.marpol.2016.12.005}
 
 \hypertarget{ref-nom049sagpesc_2014-V6}{}
 \DIFdelbegin \DIFdel{38. }\DIFdelend \DIFaddbegin \DIFadd{39. }\DIFaddend NOM-049-SAG/PESC. NORMA oficial mexicana nom-049-sag/pesc-2014, que
@@ -1611,10 +1616,9 @@ and potential value. PLoS ONE. 2017;12: e0182342.
 doi:}\href{https://doi.org/10.1371/journal.pone.0182342}{10.1371/journal.pone.0182342}
 
 \hypertarget{ref-rossetto_2015-V0}{}
-\DIFadd{43. Rossetto M, Micheli F, Saenz-Arroyo A, Montes JAE, De Leo GA, Rochet
-M-J. No-take marine reserves can enhance population persistence and
-support the fishery of abalone. Can J Fish Aquat Sci. 2015;72:
-1503--1517.
+\DIFadd{43. Rossetto M, Micheli F, Saenz-Arroyo A, Montes JAE, De Leo GA.
+No-take marine reserves can enhance population persistence and support
+the fishery of abalone. Can J Fish Aquat Sci. 2015;72: 1503--1517.
 doi:}\href{https://doi.org/10.1139/cjfas-2013-0623}{10.1139/cjfas-2013-0623}
 
 \DIFaddend \hypertarget{ref-woodcock_2017-Wm}{}
