--- a/Manuscript.tex
+++ b/Manuscript.tex
@@ -1095,8 +1095,8 @@ significantly improved the quality of this paper.
 \hypertarget{refs}{}
 \hypertarget{ref-pauly_2005-qV}{}
 1. Pauly D, Watson R, Alder J. Global trends in world fisheries: Impacts
-on marine ecosystems and food security. Philos Trans R Soc Lond, B, Biol
-Sci. 2005;360: 5--12.
+on marine ecosystems and food security. Philosophical Transactions of
+the Royal Society B: Biological Sciences. 2005;360: 5--12.
 doi:\href{https://doi.org/10.1098/rstb.2004.1574}{10.1098/rstb.2004.1574}
 
 \hypertarget{ref-halpern_2008-dK}{}
@@ -1124,7 +1124,7 @@ doi:\href{https://doi.org/10.1016/j.marpol.2016.07.032}{10.1016/j.marpol.2016.07
 
 \hypertarget{ref-hastings_2017-sm}{}
 6. Hastings A, Gaines SD, Costello C. Marine reserves solve an important
-bycatch problem in fisheries. Proc Natl Acad Sci U S A. 2017;114:
+bycatch problem in fisheries. Proc Natl Acad Sci USA. 2017;114:
 8927--8934.
 doi:\href{https://doi.org/10.1073/pnas.1705169114}{10.1073/pnas.1705169114}
 
@@ -1141,9 +1141,9 @@ climatic impacts. PLoS ONE. 2012;7: e40832.
 doi:\href{https://doi.org/10.1371/journal.pone.0040832}{10.1371/journal.pone.0040832}
 
 \hypertarget{ref-roberts_2017-J9}{}
-9. Roberts CM, O'Leary BC, McCauley DJ, Cury PM, Duarte CM, Lubchenco J,
+9. Roberts CM, OLeary BC, McCauley DJ, Cury PM, Duarte CM, Lubchenco J,
 et al. Marine reserves can mitigate and promote adaptation to climate
-change. Proc Natl Acad Sci U S A. 2017;114: 6167--6175.
+change. Proc Natl Acad Sci USA. 2017;114: 6167--6175.
 doi:\href{https://doi.org/10.1073/pnas.1701262114}{10.1073/pnas.1701262114}
 
 \hypertarget{ref-munguavega_2015-yg}{}
@@ -1174,13 +1174,13 @@ doi:\href{https://doi.org/10.1093/icesjms/fsx059}{10.1093/icesjms/fsx059}
 
 \hypertarget{ref-betti_2017-lq}{}
 14. Betti F, Bavestrello G, Bo M, Asnaghi V, Chiantore M, Bava S, et al.
-Over 10 years of variation in mediterranean reef benthic communities.
+Over 10~years of variation in mediterranean reef benthic communities.
 Marine Ecology. 2017;38: e12439.
 doi:\href{https://doi.org/10.1111/maec.12439}{10.1111/maec.12439}
 
 \hypertarget{ref-szuwalski_2017-jc}{}
 15. Szuwalski CS, Burgess MG, Costello C, Gaines SD. High fishery
-catches through trophic cascades in china. Proc Natl Acad Sci U S A.
+catches through trophic cascades in china. Proc Natl Acad Sci USA.
 2017;114: 717--721.
 doi:\href{https://doi.org/10.1073/pnas.1612722114}{10.1073/pnas.1612722114}
 
@@ -1218,7 +1218,8 @@ doi:\href{https://doi.org/10.4236/ojms.2017.73027}{10.4236/ojms.2017.73027}
 21. Moland E, Olsen EM, Knutsen H, Garrigou P, Espeland SH, Kleiven AR,
 et al. Lobster and cod benefit from small-scale northern marine
 protected areas: Inference from an empirical before-after control-impact
-study. Proc Biol Sci. 2013;280: 20122679.
+study. Proceedings of the Royal Society B: Biological Sciences.
+2013;280: 20122679--20122679.
 doi:\href{https://doi.org/10.1098/rspb.2012.2679}{10.1098/rspb.2012.2679}
 
 \hypertarget{ref-soykan_2015-nu}{}
@@ -1258,8 +1259,8 @@ doi:\href{https://doi.org/10.1016/j.gloenvcha.2013.08.001}{10.1016/j.gloenvcha.2
 
 \hypertarget{ref-lowndes_2017-xh}{}
 28. Lowndes JSS, Best BD, Scarborough C, Afflerbach JC, Frazier MR,
-O'Hara CC, et al. Our path to better science in less time using open
-data science tools. Nat ecol evol. 2017;1: 0160.
+OHara CC, et al. Our path to better science in less time using open data
+science tools. Nat ecol evol. 2017;1: 0160.
 doi:\href{https://doi.org/10.1038/s41559-017-0160}{10.1038/s41559-017-0160}
 
 \hypertarget{ref-halpern_2012-k9}{}
@@ -1269,7 +1270,7 @@ Nature. 2012;488: 615--620.
 doi:\href{https://doi.org/10.1038/nature11397}{10.1038/nature11397}
 
 \hypertarget{ref-halpern_2017-Zi}{}
-30. Halpern BS, Frazier M, Afflerbach J, O'Hara C, Katona S, Stewart
+30. Halpern BS, Frazier M, Afflerbach J, OHara C, Katona S, Stewart
 Lowndes JS, et al. Drivers and implications of change in global ocean
 health over the past five years. PLoS ONE. 2017;12: e0178267.
 doi:\href{https://doi.org/10.1371/journal.pone.0178267}{10.1371/journal.pone.0178267}
@@ -1317,9 +1318,9 @@ doi:\href{https://doi.org/10.5343/bms.2015.1095}{10.5343/bms.2015.1095}
 open access tool. PLoS ONE. 2017;12: e0179393.
 doi:\href{https://doi.org/10.1371/journal.pone.0179393}{10.1371/journal.pone.0179393}
 
-\hypertarget{ref-burgess_2016-HN}{}
+\hypertarget{ref-burgess_2018-HN}{}
 38. Burgess MG, Clemence M, McDermott GR, Costello C, Gaines SD. Five
-rules for pragmatic blue growth. Marine Policy. 2016;
+rules for pragmatic blue growth. Marine Policy. 2018;87: 331--339.
 doi:\href{https://doi.org/10.1016/j.marpol.2016.12.005}{10.1016/j.marpol.2016.12.005}
 
 \hypertarget{ref-nom049sagpesc_2014-V6}{}
@@ -1346,10 +1347,9 @@ and potential value. PLoS ONE. 2017;12: e0182342.
 doi:\href{https://doi.org/10.1371/journal.pone.0182342}{10.1371/journal.pone.0182342}
 
 \hypertarget{ref-rossetto_2015-V0}{}
-43. Rossetto M, Micheli F, Saenz-Arroyo A, Montes JAE, De Leo GA, Rochet
-M-J. No-take marine reserves can enhance population persistence and
-support the fishery of abalone. Can J Fish Aquat Sci. 2015;72:
-1503--1517.
+43. Rossetto M, Micheli F, Saenz-Arroyo A, Montes JAE, De Leo GA.
+No-take marine reserves can enhance population persistence and support
+the fishery of abalone. Can J Fish Aquat Sci. 2015;72: 1503--1517.
 doi:\href{https://doi.org/10.1139/cjfas-2013-0623}{10.1139/cjfas-2013-0623}
 
 \hypertarget{ref-woodcock_2017-Wm}{}
