Added Tex file with PLoS template

--- a/Diff.tex
+++ b/Diff.tex
@@ -686,7 +686,7 @@ This sampling design for biological data allows us to use causal
 inference techniques {[}\DIFdelbegin \DIFdel{20,41}\DIFdelend \DIFaddbegin \DIFadd{21,47}\DIFaddend {]} to evaluate the effect of the reserve
 on biological indicators. The hypothesis that the indicators will
 respond to implementation of the reserve is tested by analyzing spatial
-and temporal changes in each numeric biological indicator (all but B5)
+and temporal changes in each numeric biological indicator \DIFdelbegin \DIFdel{(all but B5)}\DIFdelend
 using generalized linear models {[}\DIFdelbegin \DIFdel{20}\DIFdelend \DIFaddbegin \DIFadd{21}\DIFaddend {]}. To account for variations in
 the environment and survey conditions, covariates that are gathered
 during the underwater ecological surveys are included in the
